Bug fixes in dark mode

--- a/css/app.css
+++ b/css/app.css
@@ -262,7 +262,7 @@ body {
     color: #373c43;
 }
 .count-death .count-info h5 {
-    color: #373c43;
+    color: #50575f;
 }
 /* End Count Box */
 
